--- a/level_design/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/level_design/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -173,6 +173,96 @@ MRUItem1=/Game/level_design
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 
+[LevelSequenceEditor SequencerSettings]
+AutoChangeMode=None
+AllowEditsMode=AllEdits
+KeyGroupMode=KeyChanged
+KeyInterpolation=Auto
+SpawnPosition=SSP_Origin
+bCreateSpawnableCameras=True
+bIsSnapEnabled=True
+bSnapKeyTimesToInterval=True
+bSnapKeyTimesToKeys=True
+bSnapSectionTimesToInterval=True
+bSnapSectionTimesToSections=True
+bSnapKeysAndSectionsToPlayRange=False
+bSnapPlayTimeToKeys=False
+bSnapPlayTimeToSections=False
+bSnapPlayTimeToMarkers=False
+bSnapPlayTimeToInterval=True
+bSnapPlayTimeToPressedKey=True
+bSnapPlayTimeToDraggedKey=True
+bSnapCurveValueToInterval=False
+bShowSelectedNodesOnly=False
+bRewindOnRecord=False
+bLeftMouseDragDoesMarquee=False
+ZoomPosition=SZP_CurrentTime
+bAutoScrollEnabled=False
+bLinkCurveEditorTimeRange=False
+bSynchronizeCurveEditorSelection=True
+bIsolateCurveEditorToSelection=True
+bCurveEditorVisible=False
+LoopMode=SLM_NoLoop
+bResetPlayheadWhenNavigating=False
+bKeepCursorInPlayRangeWhileScrubbing=False
+JumpFrameIncrement=(Value=5)
+TimeWarpDisplay=Both
+bShowLayerBars=True
+bShowKeyBars=True
+bShowChannelColors=False
+bShowInfoButton=True
+bShowTickLines=True
+bShowSequencerToolbar=True
+bShowMarkedFrames=True
+KeyAreaCurveExtents=
+KeyAreaHeightWithCurves=15.000000
+ReduceKeysTolerance=0.000100
+bDeleteKeysWhenTrimming=True
+bDisableSectionsAfterBaking=True
+MarkedFrameColor=(R=0.000000,G=1.000000,B=1.000000,A=0.400000)
+SectionColorTints=(B=142,G=102,R=88,A=255)
+SectionColorTints=(B=132,G=137,R=99,A=255)
+SectionColorTints=(B=92,G=127,R=110,A=255)
+SectionColorTints=(B=102,G=142,R=151,A=255)
+SectionColorTints=(B=101,G=119,R=147,A=255)
+SectionColorTints=(B=108,G=95,R=139,A=255)
+SectionColorTints=(B=121,G=74,R=109,A=255)
+bCleanPlaybackMode=True
+bActivateRealtimeViewports=True
+bEvaluateSubSequencesInIsolation=False
+bRerunConstructionScripts=True
+bShowDebugVisualization=False
+bVisualizePreAndPostRoll=True
+bCompileDirectorOnEvaluate=True
+TrajectoryPathCap=250
+MovieRendererName=
+bAutoExpandNodesOnSelection=True
+bRestoreOriginalViewportOnCameraCutUnlock=True
+TreeViewWidth=0.300000
+ViewDensity=Relaxed
+AssetBrowserWidth=500.000000
+AssetBrowserHeight=300.000000
+ColumnVisibilitySettings=(ColumnName="Indicator",bIsVisible=True)
+ColumnVisibilitySettings=(ColumnName="Pin",bIsVisible=True)
+ColumnVisibilitySettings=(ColumnName="Lock",bIsVisible=True)
+ColumnVisibilitySettings=(ColumnName="Solo",bIsVisible=True)
+ColumnVisibilitySettings=(ColumnName="Mute",bIsVisible=True)
+ColumnVisibilitySettings=(ColumnName="Label",bIsVisible=True)
+ColumnVisibilitySettings=(ColumnName="Edit",bIsVisible=True)
+ColumnVisibilitySettings=(ColumnName="Add",bIsVisible=True)
+ColumnVisibilitySettings=(ColumnName="Nav",bIsVisible=True)
+ColumnVisibilitySettings=(ColumnName="KeyFrame",bIsVisible=False)
+ColumnVisibilitySettings=(ColumnName="ColorPicker",bIsVisible=True)
+SidebarState=(("LevelSequenceEditor", (DrawerStates=((DrawerId="SelectionDetails")))))
+TrackFilterBars=(("LevelSequenceEditor", ()))
+bIncludePinnedInFilter=False
+bAutoExpandNodesOnFilterPass=False
+bUseFilterSubmenusForCategories=False
+bFilterBarVisible=False
+LastFilterBarLayout=Horizontal
+LastFilterBarSizeCoefficient=0.000000
+ThumbnailCaptureSettings=(CaptureFrameLocationRule=CurrentFrame)
+
 [ContentBrowser]
 ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.PluginFilters=
@@ -200,14 +290,23 @@ ContentBrowserDrawer.JumpMRU=/All/Game
 AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
 AssetDialog.ZoomScale=0
+SequencerAssetPicker.ThumbnailSize=2
+SequencerAssetPicker.CurrentViewType=0
+SequencerAssetPicker.ZoomScale=0
+ToolbarOpenBPClass.ThumbnailSize=2
+ToolbarOpenBPClass.CurrentViewType=0
+ToolbarOpenBPClass.ZoomScale=0
 
 [EditorStartup]
 LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=LevelSequenceEditor
+RecentAssetEditors=LevelSequenceEditor
 RecentAssetEditors=MaterialEditor
+OpenAssetsAtExit=/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap:PersistentLevel.FirstPersonMap
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -312,6 +411,40 @@ PointLight.HLOD=True
 PointLight.Physics=True
 PointLight.Networking=True
 PointLight.Actor=True
+LevelSequenceActor.TransformCommon=True
+LevelSequenceActor.General=True
+LevelSequenceActor.Playback=True
+LevelSequenceActor.Cinematic=True
+LevelSequenceActor.BurnInOptions=True
+LevelSequenceActor.Aspect Ratio=True
+LevelSequenceActor.Replication=True
+LevelSequenceActor.BindingOverrides=True
+LevelSequenceActor.InstanceData=True
+LevelSequenceActor.Collision=True
+LevelSequenceActor.Networking=True
+LevelSequenceActor.Actor=True
+TriggerBox.TransformCommon=True
+TriggerBox.Shape=True
+TriggerBox.Navigation=True
+TriggerBox.HLOD=True
+TriggerBox.Physics=True
+TriggerBox.Rendering=True
+TriggerBox.Collision=True
+TriggerBox.Tags=True
+TriggerBox.Cooking=True
+TriggerBox.Replication=True
+TriggerBox.Networking=True
+TriggerBox.Input=True
+TriggerBox.Actor=True
+FirstPersonMap_C.Tick=True
+FirstPersonMap_C.Replication=True
+FirstPersonMap_C.Actor=True
+FirstPersonMap_C.Input=True
+FirstPersonMap_C.HLOD=True
+FirstPersonMap_C.Physics=True
+FirstPersonMap_C.Events=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -328,6 +461,7 @@ MinimapUnloadedOpacity=0.660000
 PerWorldEditorSettings=(("/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap", ()))
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
 RecentlyPlaced=/Game/stone_block_wall_diff_1k_Mat.stone_block_wall_diff_1k_Mat;
 RecentlyPlaced=/Game/stone_block_wall_rough_1k.stone_block_wall_rough_1k;
 RecentlyPlaced=/Game/stone_block_wall_nor_gl_1k.stone_block_wall_nor_gl_1k;
@@ -344,10 +478,11 @@ RecentlyPlaced=/Game/concrete_cat_statue_diff_1k.concrete_cat_statue_diff_1k;
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
 StaticMeshComponent="\"Object.Collision.BodyInstance\" "
 MeshComponent="\"Object.Collision.BodyInstance\" "
-PrimitiveComponent=
-SceneComponent=
-ActorComponent=
-Object=
+PrimitiveComponent="\"Object.Collision.BodyInstance\" "
+SceneComponent="\"Object.Collision.BodyInstance\" "
+ActorComponent="\"Object.Collision.BodyInstance\" "
+Object="\"Object.Binding Properties.Bindings.Bindings[0]\" "
+MovieSceneBindingPropertyInfoList="\"Object.Binding Properties.Bindings.Bindings[0]\" "
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=149.600
@@ -1825,7 +1960,9 @@ LastDirectory=
 RecentsFiles=D:/UE_5.5/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/brick
+MRUItem0=/Game/NewLevelSequence
+MRUItem1=/Game/wallopen
+MRUItem2=/Game/brick
 
 [AssetEditorToolkitTabLocation]
 /Game/brick.brick=1
